added script type

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Toxin</title>
   </head>
   <body>
-    <h1>Tite</h1>
-    <script src="../src/index.js"></script>
+    <h1>Title</h1>
+    <script src="../src/index.js" type="text/javascript"></script>
   </body>
 </html>
